# cpp-examples

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
.github/workflows/: main.yml
examples/: CMakeLists.txt
examples/allocator/: main.cc
examples/any/: main.cc
examples/autodiff/: CMakeLists.txt  README.md  autodiff.h  autodiff_test.cc
examples/bit_field/: main.cc
examples/concept/: CMakeLists.txt  main.cc
examples/functor/: main.cc
examples/hello/: main.cc
examples/lambda/: main.cc
examples/logger/: CMakeLists.txt  main.cc
examples/matmul/: main.cc
examples/module/: CMakeLists.txt  hello.cc  main.cc
examples/optional/: main.cc
examples/print_type/: main.cc
examples/ranges/: CMakeLists.txt  main.cc
examples/shared_pointer/: main.cc  shared_pointer.h
examples/static_string/: main.cc
examples/unique_pointer/: main.cc  unique_pointer.h
examples/vectorization/: CMakeLists.txt  main.cc
playground/: CMakeLists.txt  lib.cc  lib.h  main.cc
src/: CMakeLists.txt
src/auto_diff/: auto_diff.h  auto_diff_test.cc
src/class_design/: README.md
src/class_oritend/: fraction.h  fraction_test.cc  overload_test.cc
src/containers/: deque_test.cc
src/enum/: README.md  enum_test.cc
src/environment/: README.md
src/exception/: README.md  exception_test.cc
src/heap_tracker/: heap_tracker.h  heap_tracker_test.cc
src/hello/: README.md  hello_test.cc
src/io/: iostream_test.cc
src/iterator/: line_iterator.h  line_iterator_test.cc
src/logger/: spdlog_test.cc
src/matrix/: matrix.h  matrix_test.cc
src/move_forward/: README.md  forward_test.cc
src/move_semantics/: README.md  forward_test.cc
src/new_delete/: README.md  heap_tracker.h  heap_tracker_test.cc  widget.h  widget_test.cc
src/object_model/: object_model_test.cc
src/pefect_forwarding/: README.md
src/smart_pointer/: README.md  shared_pointer.h  shared_pointer_test.cc  unique_pointer.h  unique_pointer_test.cc
src/storage/: storage_test.cc
src/template/: README.md  distance.h  distance_test.cc  output_container.h  output_container_test.cc  sfinae_test.cc  variadic_test.cc
src/types/: README.md  types_test.cc
src/vocabulary_types/: README.md  any_test.cc  optional_test.cc  variant_test.cc
tests/: CMakeLists.txt  thread_test.cc
tools/: run_clang_format.py  run_clang_tidy_extra.py
